# irone

./: .gitignore  .pre-commit-config.yaml  CURRENT_STATE.md  Dockerfile.marimo  LICENSE  README.md  SECURITY.md  catalog.example.yaml  cdk.json  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.serena/: project.yml
detections/: application_rules.yaml  dns_rules.yaml  sample_rules.yaml  security_hub_rules.yaml  vpc_flow_rules.yaml
docs/: cost-estimate.md  index.md  rust-patterns.md  security.md
frontend/: callback.html  detections.html  index.html  investigations.html  login.html  monitoring.html  settings.html  sources.html
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/: alb-oidc-auth.yaml  deploy-dashboard.sh  health-dashboard.yaml  iam-roles.yaml  marimo-apprunner.yaml  neptune.yaml  packaged-health-dashboard.yaml  template.yaml
iris-rs/: Cargo.toml  deny.toml
iris-rs/.cargo/: config.toml
iris-rs/crates/iris-auth/: Cargo.toml
iris-rs/crates/iris-auth/src/: bridge.rs  lib.rs  middleware.rs  types.rs
iris-rs/crates/iris-aws/: Cargo.toml
iris-rs/crates/iris-aws/examples/: explore_ocsf.rs
iris-rs/crates/iris-aws/src/: arrow_convert.rs  athena.rs  error.rs  health_cache.rs  iceberg.rs  lib.rs  security_lake.rs  sns.rs
iris-rs/crates/iris-core/: Cargo.toml
iris-rs/crates/iris-core/src/: config.rs  lib.rs
iris-rs/crates/iris-core/src/catalog/: mod.rs
iris-rs/crates/iris-core/src/connectors/: base.rs  mod.rs  ocsf.rs  result.rs  sql_utils.rs
iris-rs/crates/iris-core/src/detections/: mod.rs  rule.rs  runner.rs
iris-rs/crates/iris-core/src/graph/: builder.rs  enrichment.rs  mod.rs  models.rs  timeline.rs
iris-rs/crates/iris-core/src/notifications/: mod.rs
iris-rs/crates/iris-core/src/reports/: models.rs
iris-rs/crates/iris-health-checker/: Cargo.toml
iris-rs/crates/iris-health-checker/src/: checker.rs  lib.rs  main.rs
iris-rs/crates/iris-persistence/: Cargo.toml
iris-rs/crates/iris-persistence/src/: error.rs  lib.rs  store.rs
iris-rs/crates/iris-web/: Cargo.toml
iris-rs/crates/iris-web/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
iris-rs/crates/iris-web/src/routers/: dashboard.rs  detections.rs  investigations.rs  mod.rs  query.rs  sources.rs
iris-rs/crates/iris-web/tests/: api_tests.rs
iris-rs/rules/: api-permission-enumeration.yaml  github-oidc-unexpected-repo.yaml  iam-privilege-escalation.yaml  lambda-invocation-spike.yaml  security-hub-critical.yaml  test-any-api-activity.yaml
irone-rs/: Cargo.toml  deny.toml
irone-rs/crates/irone-alerting/: Cargo.toml
irone-rs/crates/irone-alerting/src/: main.rs
irone-rs/crates/irone-auth/: Cargo.toml
irone-rs/crates/irone-auth/src/: bridge.rs  lib.rs  middleware.rs
irone-rs/crates/irone-aws/: Cargo.toml
irone-rs/crates/irone-aws/examples/: explore_ocsf.rs
irone-rs/crates/irone-aws/src/: arrow_convert.rs  athena.rs  error.rs  health_cache.rs  iam.rs  iceberg.rs  lib.rs  secrets.rs  security_hub.rs  security_lake.rs  sns.rs
irone-rs/crates/irone-aws/tests/: scan_benchmark.rs
irone-rs/crates/irone-core/: Cargo.toml
irone-rs/crates/irone-core/src/: audit.rs  config.rs  lib.rs
irone-rs/crates/irone-core/src/catalog/: mod.rs  models.rs  registry.rs
irone-rs/crates/irone-core/src/connectors/: base.rs  ocsf.rs  sql_utils.rs
irone-rs/crates/irone-core/src/detections/: mod.rs  rule.rs  runner.rs  test_case.rs
irone-rs/crates/irone-core/src/graph/: attack_path.rs  builder.rs  enrichment.rs  mod.rs  models.rs  patterns.rs  timeline.rs
irone-rs/crates/irone-core/src/investigator/: client.rs  mod.rs  models.rs  prompt.rs
irone-rs/crates/irone-core/src/notifications/: mod.rs
irone-rs/crates/irone-core/src/playbooks/: mod.rs  models.rs  runner.rs
irone-rs/crates/irone-core/src/reports/: mod.rs  models.rs
irone-rs/crates/irone-core/tests/: rule_test_cases.rs
irone-rs/crates/irone-health-checker/: Cargo.toml
irone-rs/crates/irone-health-checker/src/: checker.rs  main.rs
irone-rs/crates/irone-persistence/: Cargo.toml
irone-rs/crates/irone-persistence/src/: store.rs
irone-rs/crates/irone-web/: Cargo.toml
irone-rs/crates/irone-web/src/: app.rs  config.rs  error.rs  investigation_store.rs  lib.rs  main.rs  state.rs
irone-rs/crates/irone-web/src/routers/: dashboard.rs  detections.rs  investigations.rs  query.rs  sources.rs
irone-rs/crates/irone-web/tests/: api_tests.rs
irone-rs/crates/irone-worker/: Cargo.toml
irone-rs/crates/irone-worker/src/: main.rs
irone-rs/docs/: aws-attack-techniques-detection-research.md
irone-rs/playbooks/: credential-compromise.yaml  defense-evasion.yaml  k8s-container-escape.yaml
irone-rs/rules/: access-key-created.yaml  account-resource-enumeration.yaml  anomalous-region-activity.yaml  api-permission-enumeration.yaml  canary-lambda-invoke.yaml  canary-sts-identity.yaml  cloud-data-destruction.yaml  cloudtrail-tampering.yaml  cognito-auth-failure-spike.yaml  console-login-failure-spike.yaml  console-login-new-ip.yaml  cross-account-role-assumption.yaml  dns-tunneling.yaml  ebs-snapshot-sharing.yaml  ec2-instance-launch.yaml  ec2-userdata-enumeration.yaml  ecr-image-poisoning.yaml  eks-cronjob-creation.yaml  eks-daemonset-creation.yaml  eks-kubectl-exec.yaml  eks-nodeport-exposure.yaml  eks-privileged-pod.yaml  eks-rbac-escalation.yaml  eks-secret-access.yaml  eks-service-account-token.yaml  gcp-audit-logging-tampering.yaml  gcp-bucket-made-public.yaml  gcp-compute-enumeration.yaml  gcp-iam-policy-change.yaml  gcp-service-account-key-created.yaml  get-federation-token.yaml  github-oidc-unexpected-repo.yaml  guardduty-tampering.yaml  iam-privilege-escalation.yaml  iam-roles-anywhere-abuse.yaml  iam-user-role-creation.yaml  kms-key-policy-tampering.yaml  lambda-execution-failure.yaml  lambda-invocation-spike.yaml  lambda-layer-backdoor.yaml  (+18 more)
irone-rs/supply-chain/: config.toml
notebooks/: deployment.py  detection_engineering.py  investigation.py  main.py  monitoring.py  security_lake_health.py
scenarios/: 01-compromised-iam-keys.md  02-k8s-container-escape.md  README.md  (+4 more)
(+241 files in other folders)
