[project]
name = "secdashboards"
version = "0.1.0"
description = "Security Data Lake Analytics - Connect to AWS Security Lake, create detection rules, and deploy to Lambda"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
keywords = ["security", "aws", "security-lake", "ocsf", "detection", "siem", "graph", "fastapi", "htmx", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",
    "duckdb>=1.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mangum>=0.19.0",
    "python-multipart>=0.0.22",
    "jinja2>=3.1.0",
    "pyjwt[crypto]>=2.10.0",
    "cedarpy>=4.8.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "croniter>=5.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
investigation = [
    "polars>=1.0.0",
    "pyarrow>=18.0.0",
    "plotly>=5.24.0",
    "pyvis>=0.3.2",
    "gremlinpython>=3.7.0",
    "networkx>=3.2",
]

[project.scripts]
secdash = "secdashboards.cli:app"

[project.urls]
Repository = "https://github.com/lexicone42/secdashboards"
Issues = "https://github.com/lexicone42/secdashboards/issues"

[dependency-groups]
dev = [
    "secdashboards[investigation]",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
    "boto3-stubs[essential,athena,s3,lambda,events,glue,securitylake,neptune]>=1.35.0",
    "moto>=5.1.20",
    "prek>=0.3.2",
    "cfn-lint>=1.43.3",
    "hypothesis>=6.100.0",
    "cryptography>=44.0.0",
    "aws-cdk-lib>=2.238.0",
    "constructs>=10.4.5",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]
cdk = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secdashboards"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.ruff.lint.per-file-ignores]
# Allow longer lines in test files (test data, assertions)
"tests/*.py" = ["E501"]
"infrastructure/cdk/tests/*.py" = ["E501"]
# Scripts contain long strings (ARNs, markdown content, demo data)
"scripts/*.py" = ["E501"]
# CDK stacks contain long resource strings and CSP policies
"infrastructure/cdk/stacks/*.py" = ["E501"]
# FastAPI routers use Depends() in default arguments — this is the standard pattern
"src/secdashboards/web/routers/*.py" = ["B008"]
# Auth routes also use Depends() in default arguments
"src/secdashboards/web/auth/routes/*.py" = ["B008"]

[tool.ty]
# Ty (Astral's type checker) configuration
# Docs: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# Warn on unresolved imports (optional deps may not be installed)
unresolved-import = "warn"
# Catch missing attributes (previously warn, now error since codebase is clean)
possibly-missing-attribute = "error"
# Catch potential division by zero
division-by-zero = "warn"

[tool.ty.src]
# Exclude files with optional dependencies that may not be installed
exclude = [
    "src/secdashboards/reports/exporters.py",  # playwright is optional
]
