[workspace]
resolver = "2"
members = [
    "crates/iris-core",
    "crates/iris-aws",
    "crates/iris-auth",
    "crates/iris-persistence",
    "crates/iris-web",
    "crates/iris-health-checker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
repository = "https://github.com/lexicone42/secdashboards"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Regex
regex = "1"

# Persistence
redb = "2"

# Internal crates
iris-core = { path = "crates/iris-core" }
iris-aws = { path = "crates/iris-aws" }
iris-auth = { path = "crates/iris-auth" }
iris-persistence = { path = "crates/iris-persistence" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
