[workspace]
resolver = "2"
members = [
    "crates/irone-core",
    "crates/irone-aws",
    "crates/irone-auth",
    "crates/irone-persistence",
    "crates/irone-web",
    "crates/irone-health-checker",
    "crates/irone-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
repository = "https://github.com/lexicone42/irone"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Config
envy = "0.4"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Regex
regex = "1"

# Persistence
redb = "3"

# AWS
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-athena = "1"
aws-sdk-s3 = "1"
aws-sdk-dynamodb = "1"
aws-sdk-sfn = "1"
aws-sdk-sns = "1"

# Auth (l42-cognito-passkey token handler)
l42-token-handler = { path = "../../l42cognitopasskey/rust" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rand = "0.8"
dashmap = "6"
base64 = "0.22"

# CSV parsing
csv = "1.3"

# Apache Iceberg (direct S3/Parquet reads via Glue catalog)
iceberg = "0.8"
iceberg-catalog-glue = "0.8"
arrow-array = "57"
arrow-schema = "57"
arrow-cast = "57"
arrow-select = "57"
arrow-ord = "57"
arrow-arith = "57"
parquet = { version = "57", features = ["arrow", "async"] }
futures = "0.3"
bytes = "1"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "cors"] }
http = "1"

# Lambda runtime
lambda_http = "0.14"
lambda_runtime = "0.13"

# Internal crates
irone-core = { path = "crates/irone-core" }
irone-aws = { path = "crates/irone-aws" }
irone-auth = { path = "crates/irone-auth" }
irone-persistence = { path = "crates/irone-persistence" }
irone-web = { path = "crates/irone-web" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
