[package]
name = "iris-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
