[package]
name = "iris-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
l42-token-handler = { workspace = true }
iris-core = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tokio = { workspace = true }
urlencoding = "2.1.3"

[dev-dependencies]
tower = { workspace = true }

[lints]
workspace = true
