[package]
name = "iris-aws"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
iris-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
aws-config = { workspace = true }
aws-sdk-athena = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sns = { workspace = true }
csv = { workspace = true }

[lints]
workspace = true
