[package]
name = "iris-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
envy = { workspace = true }

[dev-dependencies]
proptest = "1"
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }

[lints]
workspace = true
