[package]
name = "iris-health-checker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
iris-core = { workspace = true }
iris-aws = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
