[package]
name = "iris-health-checker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
iris-core = { workspace = true }
iris-aws = { workspace = true }
aws-config = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[[bin]]
name = "iris-health-checker"
path = "src/main.rs"

[lints]
workspace = true
