[package]
name = "iris-persistence"
version.workspace = true
edition.workspace = true

[dependencies]
iris-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
