[package]
name = "iris-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
iris-core = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
