[package]
name = "iris-web"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
iris-core = { workspace = true }
iris-aws = { workspace = true }
iris-auth = { workspace = true }
iris-persistence = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
lambda_http = { workspace = true }
http = { workspace = true }
aws-config = { workspace = true }
envy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "iris-web"
path = "src/main.rs"

[dev-dependencies]
tower = { workspace = true }

[lints]
workspace = true
