[package]
name = "irone-alerting"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
irone-core = { workspace = true }
irone-aws = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sfn = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sns = { workspace = true }
aws-sdk-securityhub = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "irone-alerting"
path = "src/main.rs"

[lints]
workspace = true
