[package]
name = "irone-health-checker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
irone-core = { workspace = true }
irone-aws = { workspace = true }
aws-config = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[[bin]]
name = "irone-health-checker"
path = "src/main.rs"

[lints]
workspace = true
